# grimec

./: .gitignore  CMakeLists.txt  README.md  build.gm
.github/workflows/: main.yml
src/: ast.c  ast.h  log.c  log.h  main.c  main.gm  main.s
src/code-gen/: code-gen.h
src/code-gen/llvm/: llvm-code-gen.c  llvm-code-gen.h  llvm-symbols.c  llvm-symbols.h
src/file/: file.c  file.h
src/lexer/: lex.c  lex.h  token.c  token.h
src/parser/: parser.c  parser.h
src/resolve/: type-resolve.c
src/resolver/: type-resolver.c  type-resolver.h
src/util/: colours.h  log.c  log.h  mem.c  mem.h  tree.c  tree.h
test/: helloworld.gm  test.gm  trait.gm  type.gm  typeTest.gm  while.gm
test/util/: tree  tree.c
